update style.css - adding synbiota colours3

--- a/config/public/wp-content/themes/hardy/style.css
+++ b/config/public/wp-content/themes/hardy/style.css
@@ -660,7 +660,7 @@ a.action {
 	padding: 30px 30px 30px;
 	margin: 0 0 50px;
 /*	background: #f7f7f7; */
-    background: #e62b7c;
+    background: #ee91b9;
 }
 
 .page-template-page-portfolio-php #pageHead {
@@ -702,7 +702,7 @@ a.action {
 	padding: 25px 5% 25px;
 	text-align: center;	
 /*	background: #f7f7f7;	*/
-    background: #e62b7c;
+    background: #ee91b9;
 }
 
 #homeMessage p{	
