update style.css - adding synbiota colours5

--- a/config/public/wp-content/themes/hardy/style.css
+++ b/config/public/wp-content/themes/hardy/style.css
@@ -660,7 +660,7 @@ a.action {
 	padding: 30px 30px 30px;
 	margin: 0 0 50px;
 /*	background: #f7f7f7; */
-    background: #5ebc9a;
+    background: #edf6fb;
 }
 
 .page-template-page-portfolio-php #pageHead {
@@ -702,7 +702,7 @@ a.action {
 	padding: 25px 5% 25px;
 	text-align: center;	
 /*	background: #f7f7f7;	*/
-    background: #5ebc9a;
+    background: #edf6fb;
 }
 
 #homeMessage p{	
@@ -1683,7 +1683,7 @@ ol#commentslist {
 
 #footer {	
 /*	background: #f7f7f7; */
-    background: #5fbfe7;
+    background: #edf6fb;
 }
 
 #footer .inside {
