--- a/config/public/wp-content/themes/hardy/style.css
+++ b/config/public/wp-content/themes/hardy/style.css
@@ -286,8 +286,8 @@ input[type="text"]:focus {outline: none; background-color: #f7f7f7;}
 textarea:focus {outline: none; background-color: #f7f7f7;}
 */
 
-input[type="text"]:focus {outline: none; background-color: #5ebc9a;}
-textarea:focus {outline: none; background-color: #5ebc9a;}
+input[type="text"]:focus {outline: none; background-color: #f1f9f6;}
+textarea:focus {outline: none; background-color: #f1f9f6;}
 
 
 textarea { width: 80%; line-height: 1.6em; }
