--- a/config/public/wp-content/themes/hardy/style.css
+++ b/config/public/wp-content/themes/hardy/style.css
@@ -276,7 +276,7 @@ input[type="text"], textarea {
 	border: 1px solid rgba(0,0,0,.05);
 	border-bottom: 2px solid rgba(0,0,0,.1);
 /*	background:	#f7f7f7; */
-    background: #ee91b9;
+    background: #f1f9f6;
 	font-size: .9em;
 	-webkit-appearance: none;
 }
